welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:35: error: not found: value estDoseMur
	while(!estDoseMur())
               ^